@@ -1192,7 +1192,6 @@
                 </plugins>
             </build>
         </profile>
-        <!--
         <profile>
             <id>jdk-11</id>
             <activation>
@@ -1205,13 +1204,13 @@
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-surefire-plugin</artifactId>
                             <configuration>
+                                <argLine>${surefire.args} --add-exports=java.xml/jdk.xml.internal=ALL-UNNAMED --add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
                             </configuration>
                         </plugin>
                     </plugins>
                 </pluginManagement>
             </build>
         </profile>
-        -->
         <profile>
             <id>jdk-17</id>
             <activation>
